# MasterThesis

./: Empatica_README.txt  README.md
Docker/: README.md
Docker/e4_msgs/: package.xml
Docker/ros2-empatica_e4/: README.md
Docker/ros2-empatica_e4/src/empatica_e4/: package.xml
Docker/ros2-empatica_e4/src/empatica_e4/launch/: ros2-empatica_E4.launch.py
Docker/sync_data_sub/: package.xml
Experimental Design/: Experiment Instructions.docx  README.md
Experimental Design/Task Config/: task3 (CY,CZ).yaml
Extra Files/: command.txt  empatica.py
Presentations/: PresentationW1.pptx  PresentationW10.pptx  PresentationW11.pptx  PresentationW12 (1).pptx  PresentationW12.pptx  PresentationW13 (1).pptx  PresentationW14.pptx  PresentationW2.pptx  PresentationW3.pptx  PresentationW4.pptx  PresentationW5.pptx  PresentationW6.pptx  PresentationW7.pptx  PresentationW8 (1).pptx  PresentationW8.pptx
Stress Detection/: List of features.docx  Stress_model.ipynb  preprocessing.py  requirements.txt  stress_detection_copy.py
Stress Detection/Final Scripts/: Anova.ipynb  Delete combined data script.py  Final Stress Detection Algorithm.py  Final Stress_model .ipynb  Nasa-Tlx-zscores.csv  readme.md  tlx process.ipynb
Task config Faizan/: 50 backup.yaml  50chanched (copy).yaml  50chanched.yaml  kinda.yaml  task1backup.yaml
e4_msgs/: CMakeLists.txt
ros2-empatica_e4/: README.md
sync_data_sub/: CMakeLists.txt
template-thesis/: .gitignore  .gitlab-ci.yml  other.bib  pub.bib  thesis.bib  thesis.tex
writing-thesis/: .gitignore  .gitlab-ci.yml  README.md  thesis.bib  thesis.tex
(+95 files in other folders)
